Fixed whitespace under background

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+html, body{
+	height: 100%;
+}
+
 h3, h2, h1{
 	margin: 0px;
 	border: 0px;
@@ -7,10 +11,10 @@ h3, h2, h1{
 
 #background{
 	position: absolute;
-	width: 100%;
-	height: 160%;
-	background:url("../images/Durham_Mural.jpg");
+	width: 120%;
+	height: 180%;
 	margin-top: -100px;
+	background:url("../images/Durham_Mural.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 }
@@ -150,7 +154,7 @@ h3, h2, h1{
 
 li{
 	width: 100%;
-	margin-top: 0px;
+	margin: 0px;
 	border-style: solid;
 	border-color: black;
 	border-top-width: 0px;
@@ -190,6 +194,13 @@ li{
 }
 
 @media only screen and (max-width: 715px){
+	#background{
+		width: 200%;
+		height: 200%;
+	}
+}
+
+@media only screen and (max-width: 715px){
 	#nav, #content{
 		display: block;
 	}
@@ -197,7 +208,8 @@ li{
 		background-color: #acacac;
 	}
 	#background{
-		background-size: 250% 250%;
+		height: 200%;
+		width: 200%;
 	}
 	#wrapper{
 		width: 100%;
